[tool.poetry]
name = "nhan-learning-llm"
version = "0.1.0"
description = ""
authors = ["Nhan Nguyen <nhan.nguyen@27global.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
langchain = "^0.3.10"
openai = "^1.57.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
